<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/navigation_drawer"
    tools:context=".ui.activities.MainActivity"
    >



    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img2"
                    android:fitsSystemWindows="true"/>

                <android.support.v7.widget.Toolbar
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"

                    app:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"
                    >
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>



        </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/spacing_0dp"
              android:paddingRight="@dimen/spacing_0dp"
              android:paddingTop="@dimen/spacing_0dp"
              tools:context=".ui.activities.MainActivity"
              android:orientation="vertical"
              android:weightSum="1">





    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/size_big_72"
        android:background="@color/grey"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                style="@style/top_text.big"
                android:text="@string/rating_value"/>

            <TextView
                style="@style/top_text.small"
                android:text="@string/rating_text"/>
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="match_parent"
            android:background="@color/white"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                style="@style/top_text.big"
                android:text="@string/count_string_value"/>

            <TextView
                style="@style/top_text.small"
                android:text="@string/count_string_text"/>
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                style="@style/top_text.big"
                android:text="@string/projects_count_value"/>

            <TextView
                style="@style/top_text.small"
                android:text="@string/projects_count_text"/>
        </LinearLayout>
    </LinearLayout>









<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">




        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_0dp"
            android:layout_marginRight="@dimen/spacing_normal_16">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/mobile_phone_text"
                android:text="@string/mobile_phone_value"
                android:enabled="false"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:focusable="false"
                android:fontFamily="sans-serif-medium"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_large_56"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/progress"
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_0dp"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_text"
                    android:text="@string/email_value"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_email_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_large_56"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_0dp"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/vk_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/vk_text"
                    android:text="@string/vk_value"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_large_56"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_extra_96"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_0dp"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/github_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/git_text"
                    android:text="@string/git_value"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/small_text_12"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_large_56"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_0dp"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/about_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about_text"
                    android:text="@string/about_value"
                    android:inputType="textMultiLine"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/small_text_12"

                    android:paddingBottom="10dp"
                    android:maxLines="10"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            />
    </LinearLayout>













    </LinearLayout>



















</LinearLayout>

    </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_build_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="@dimen/fab_right_space"



            />

    </android.support.design.widget.CoordinatorLayout>

    
<android.support.design.widget.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/drawer_header"
    app:menu="@menu/drawer_menu"
    >


</android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>